--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
     "@reduxjs/toolkit": "^2.10.1",
+    "axios": "^1.13.2",
     "clsx": "^2.1.1",
     "formik": "^2.4.9",
     "framer-motion": "^12.23.24",
