--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "clsx": "^2.1.1",
     "formik": "^2.4.9",
     "framer-motion": "^12.23.24",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.553.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.66.1",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^10.0.0",
+    "react-leaflet": "^5.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.5",
     "react-toastify": "^11.0.5",
